home-cluster/kyverno/tests/resources/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: test-secret
  namespace: ai-services
type: Opaque
