home-cluster/kyverno/tests/userinfo/flux.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: flux-kustomize-controller
userInfo:
  username: system:serviceaccount:flux-system:kustomize-controller
